--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -123,7 +123,7 @@ main {
 /****************** 1. Default Styles: *******************/
 
 // section titles
-[class*="__title"][class*="home-"] {
+[class*="__title"][class*="home-"], [class*="__title"][class*="spatial-"] {
 	margin-bottom: .5em;
 	margin-top: 1em;
 	font-family: "Raleway", sans-serif;
@@ -137,7 +137,7 @@ main {
 }
 
 // in-text links, topic pages
-[class*="home-"], [class*="maker-"], [class*="post-"], [class*="person-"] {
+[class*="home-"], [class*="maker-"], [class*="post-"], [class*="person-"], [class*="spatial-"] {
 	a {
 		font-family: "base-mono-narrow", monospace;
 	//	font-weight: bold; // >>>>>>>>>>>>>>>>> undo this and redo it as a separate commit
