Change class name of workshop titles so =/= conflict w/ universal titles

--- a/assets/css/_sass/_spatial-tech.scss
+++ b/assets/css/_sass/_spatial-tech.scss
@@ -549,7 +549,8 @@
 	position: relative;
 }
 
-.spatial-showcase__title {
+// avoid universal __title selector
+.spatial-showcase__ws-title {
 
 }
 
