Add CSS setup for new contact section added in HTML

--- a/assets/css/_sass/_spatial-tech.scss
+++ b/assets/css/_sass/_spatial-tech.scss
@@ -447,6 +447,16 @@
 
 }
 
+/* Contact: */
+
+.spatial__contact {
+	grid-area: contact;
+}
+
+.spatial-contact__title {
+
+}
+
 /* Resources: */
 
 .spatial__resources {
