--- a/assets/css/_sass/_spatial-tech.scss
+++ b/assets/css/_sass/_spatial-tech.scss
@@ -534,9 +534,14 @@
 .spatial-people__person {
 	position: relative;
 	display: inline-block;
-	padding: 0 1em;
+	padding: 1em;
+	margin: 0 .5rem;
+	text-transform: uppercase;
+	background-color: white;
+	border: 2px solid black;
+	box-shadow: 4px 4px 0 0 rgba(0,0,0,.5);
 	@media screen and (min-width: 768px) {
-		width: 25%;
+		width: calc(25% - 1rem);
 	}
 }
 
@@ -551,12 +556,16 @@
 
 .spatial-person__name {
 	a {
-
+		display: inline-block;
+		margin: .5em 0;
+		font-size: 1.5rem;
+		line-height: 1;
+		font-weight: bold;
 	}
 }
 
 .spatial-person__position {
-
+	font-family: "base-mono-narrow", monospace;
 }
 
 /* Inclusivity Note: */
