--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -127,8 +127,7 @@
 .person__description {
 	grid-area: describe;
 	@media screen and (min-width: 1024px) {
-		max-width: 800px;
-		margin: 0 auto;
+		font-size: 18px;
 	}
 }
 
