Fix 'if' condition on whether to show twitter section

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -20,7 +20,7 @@ layout: default
 				{% if page.email !=  nil %}
 				<span>Email:</span>{{ page.email}}<br/>
 				{% endif %}
-				{% if page.twitter != nil %}
+				{% if page.twitter != 'None' %}
 				<span>Twitter:</span>@{{ page.twitter }}<br/>
 				{% endif %}
 				{% if page.website != 'None' %}
