Simplify 'position/title' div on person page

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -9,10 +9,7 @@ layout: default
 
 		<div class="person__big-title"><span aria-label="page type">People //</span>{{ page.name }}</div>
 
-		<div class="person__position">
-			<div class="person-pos__title">Who</div>
-			<div class="person-pos__text">{{ page.position }}<!--span>Staff</span--></div>
-		</div>
+		<div class="person__position">{{ page.position }}</div>
 
 		<div class="person__stats"> <!-- using components/stats-box.scss -->
 			<div class="person-stats__box">
