--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -42,7 +42,7 @@ layout: default
 		<div class="person__description">
 			<div class="person-describe__title">About</div>
 			<div class="person-describe__text">{{ content }}</div>
-			<p class="liquid-testing"> <!-- liquid testing -->
+			<div class="person-describe__category"> <!-- liquid testing -->
 				<h3>Categories</h3>
 				<ul>
 				{% assign pc = page.people-category %}
@@ -87,7 +87,7 @@ layout: default
 					{% endif %}
 				{% endif %}
 				</ul>
-			</p>
+			</div>
 		</div> <!-- end 'about' -->
 
 		<div class="person__posts">
