--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -116,6 +116,9 @@
 	justify-self: center;
 	img {
 		max-width: 100%;
+		border-right: 1px solid white;
+		border-bottom: 1px solid white;
+		box-shadow: 4px 4px 0 0 rgba(0,0,0,.5);
 	}
 	@media screen and (min-width: 768px) {
 		width: 100%;
