Add title to stats section
- More detailed message for demonstration

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -12,6 +12,7 @@ layout: default
 		<div class="person__position">{{ page.position }}</div>
 
 		<div class="person__stats"> <!-- using components/stats-box.scss -->
+			<div class="person-stats__title">Around the Web</div>
 			<div class="person-stats__box">
 				<div>Around the Web</div>
 				{% if page.email !=  nil %}
