--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -91,8 +91,10 @@ layout: default
 			</div>
 		</div> <!-- end 'about' -->
 
+		<!-- list of blog posts by person -->
+		{% assign author_posts = site.posts | where: "author", page.slug %}
+
 		<div class="person__posts">
-		{% assign author_posts = site.fake-blog | where: "author", page.slug | reverse %}
 		{% if author_posts.size >= 1 %}
 		  <h2 class="person-posts__title">Posts by {{ page.title }}</h2>
 	    <ul class="person-posts__list">
