Change date format in post preview on person page
- Love lots of (a)lliteration!

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -102,7 +102,7 @@ layout: default
 	      <li>
 					<a href="{{ post.url }}">
 						<div class="person__post-title">{{ post.title }}</div>
-						<span>{{ post.date | date: "%B %-d, %Y" }}</span>
+						<span>{{ post.date | date: "%m.%d.%Y" }}</span>
 					</a>
 	      </li>
 	    {% endfor %}
