Set "all posts" link to blog (had been people page)

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -113,7 +113,7 @@ layout: default
 		</div>
 
 		{% if author_posts.size >= 1 %}
-		<div class="person__cta"><a href="{{ site.baseurl}}/people">All Posts &rsaquo;</a></div> <!-- using components/link-button.scss -->
+		<div class="person__cta"><a href="{{ site.baseurl}}/blog">All Posts &rsaquo;</a></div> <!-- using components/link-button.scss -->
 		{% endif %}
 	</div>
 </div>
