--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -76,19 +76,29 @@
 .person__big-title {
 	position: relative;
 	grid-area: name;
-//	margin-bottom: .5em;
-	font-size: 3rem;
+	align-self: start;
+	font-size: 2rem;
 	font-weight: 900;
 	line-height: 1;
 	span {
 		display: block;
-		padding-bottom: .5em;
+		padding-bottom: 2px;
 		font-size: .5em;
 		font-family: "base-mono-wide";
-	//	font-weight: 400;
 		text-transform: uppercase;
 		color: hsla(186,80%,70%,1);
-	//	transform: translate(0, 6px);
+	}
+	@media screen and (min-width: 400px) {
+		font-size: 2.5rem;
+	}
+	@media screen and (max-width: 767px) {
+		padding-top: .5em;
+	}
+	@media screen and (min-width: 1024px) {
+		font-size: 3rem;
+		span {
+			padding-bottom: .5em;
+		}
 	}
 }
 
