Add more exact math so image exactly 100% of screen at small sizes
- There's universal padding on all the content (or rather, on the wrapper)

- That padding adds up to 8.33vw, so did have the image div width
  at 108.33%

- Left a small gap -> hmm, time for actual math:
  - (100 - 8.33) * x = 100
  - x = 109.090909 = 109.1%

--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -135,7 +135,7 @@
 .person__img {
 	grid-area: img;
 	position: relative;
-	width: 108.33%;
+	width: 109.1%; // 100% / 91.67% = 100vw
 	justify-self: center;
 	img {
 		max-width: 100%;
