--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -146,10 +146,15 @@
 			box-shadow: 4px 4px 0 0 rgba(0,0,0,.5);
 		}
 	}
+	@media screen and (min-width: 768px) {
+		align-self: start;
+		margin-top: 24px;
 		padding-left: 4.167%;
 		img {
 			max-width: 95.833%;
 			float: right;
+			transform: translate(-4px, 0);
+			
 		}
 	}
 }
