Add class/styles for person category, tho currently hidden
- Unsure if ppl want to use, we'll see what content decides

--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -183,6 +183,14 @@
 	}
 }
 
+.person-describe__category {
+	display: none;
+	h3 {
+   // 	font-family: "Oswald";
+		font-size: 1.5rem;
+		font-weight: 900;
+	//	text-transform: uppercase;
+	}
 }
 
 /* Stats: */
