--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -198,19 +198,29 @@
 .person__stats {
 	grid-area: stats;
 	@media screen and (min-width: 768px) {
-		padding-right: 8.33%; // 4.167%;
+		padding-right: 4.167%;
 	}
+	@media screen and (min-width: 1024px) {
+		align-self: start;
+		margin-top: 1.5rem;
+		padding-right: 0px;
+		padding-left: 8.33%;
+	}
+}
+
+.person-stats__title {
+	margin-bottom: .25em !important;
 }
 
 .person-stats__box {
 	position: relative;
 	border: 4px solid hsla(186,80%,70%,1);
 	font-family: "base-mono-narrow", monospace;
-	font-size: 20px;
+	font-size: 1rem;
 	text-align: right;
-	margin-top: 1.5em; //calc(2em + 4px);
 	padding: .5em 1em;
 	div {
+		display: none;
 		position: absolute;
 		font-family: "Oswald", sans-serif;
 		font-size: 1.5rem;
@@ -223,6 +233,9 @@
 	span {
 		float: left;
 		color: hsla(186,80%,70%,1);
+	}
+	@media screen and (min-width: 1024px) {
+		font-size: 1.25rem;
 	}
 }
 
