Style text that displays if no posts by person are found

--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -290,6 +290,14 @@
             }
         }
     }
+
+.person-posts__none-found {
+	font-family: "base-mono-narrow", monospace;
+	font-weight: 200;
+	color: rgba(0,0,0,.5);
+	@media screen and (min-width: 1024px) {
+		margin-bottom: 2em;
+	}
 }
 
 /* Button: */
