Tweak styling & add media queries to recent blog post list:
- Tweak font and padding

- Make responsive (switches from vertical to horizontal dep. on size)

- Different font sizes & spacing for diff screen sizes

- Doing same "set larger than 100%" trick as used on spatial tech page
  so margins don't affect content being flush with title

--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -254,42 +254,66 @@
 
 // <ul>
 .person-posts__list {
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-content: space-between;
-    padding: 0;
-    list-style-type: none;
-    /*	@media screen and (min-width: 1200px) {
-		max-width: 1000px;
-		margin: 0 auto;
-	} */
-    li {
-        position: relative;
-        display: inline-block;
-        width: calc(100% - 1em);
-        margin: .5em;
-        font-size: 1.5rem;
-        border: 4px solid hsla(186,80%,70%,1);
-        a {
-            display: flex;
-            flex-flow: column nowrap;
-            justify-content: center;
-            height: 100%;
-            width: 100%;
-            padding: 0 1em;
-            border: none !important;
-            div {
-                font-family: "Oswald", sans-serif;
-                font-weight: 600;
-            }
-            span {
-                font-family: "Oswald", sans-serif;
-                font-weight: 600;
-                color: rgba(0, 0, 0, 0.5);
-            }
-        }
-    }
+	position: relative;
+	display: grid;
+	grid-template-rows: repeat(3, 1fr);
+	grid-template-columns: 1fr;
+	align-items: space-between;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	font-size: 1.25rem;
+	list-style-type: none;
+	li {
+		position: relative;
+		display: inline-block;
+		width: 100%;
+		margin: .5em 0;
+		background-color: white;
+		border: 4px solid hsla(186,80%,70%,1);
+		a {
+			display: flex;
+			flex-flow: column nowrap;
+			justify-content: center;
+			height: 100%;
+			width: 100%;
+			padding: 1em;
+			line-height: 1;
+			border: none !important;
+			div {
+				margin-bottom: .5em;
+				font-family: "Oswald", sans-serif;
+				font-weight: 600;
+			}
+			span {
+				font-size: .75em;
+				font-family: "base-mono-narrow", monospace; // "Oswald", sans-serif;
+				font-weight: 200;
+				color: rgba(0, 0, 0, 0.5);
+			}
+		}
+	}
+	@media screen and (min-width: 768px) {
+		grid-template-rows: 1fr;
+		grid-template-columns: repeat(3, 1fr);
+		justify-content: space-between;
+		width: calc(100% + 1em);
+		margin: 0;
+		margin-left: -.5em; // overflow width
+		padding: 0;
+		font-size: 1.25rem;
+		li {
+			width: calc(100% - 1em);
+			margin: 0 .5em;
+		}
+	}
+	@media screen and (min-width: 1024px) {
+		font-size: 1.5rem;
+	}
+	@media screen and (min-width: 1200px) {
+		font-size: 1.75rem;
+	}
+}
 
 .person-posts__none-found {
 	font-family: "base-mono-narrow", monospace;
