Set smaller font (+ variable sizes) on CTA button than universal selector
- CTA button styling doesn't have diff sizes at diff screen sizes, so
  added that & made font smaller based on size choices used in Events pg

--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -329,7 +329,18 @@
 .person__cta {
 	grid-area: button;
 	a {
+		font-size: 1rem !important;
 		border-color: hsla(186,80%,70%,1) !important;
 		color: hsla(186,80%,70%,1) !important;
+	}
+	@media screen and (min-width: 768px) {
+		a {
+			font-size: 1.25rem !important;
+		}
+	}
+	@media screen and (min-width: 1024px) {
+		a {
+			font-size: 1.5rem !important;
+		}
 	}
 }
