--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -328,13 +328,24 @@
 
 .person__cta {
 	grid-area: button;
+	position: relative;
+	margin-bottom: 3em;
+	margin-top: 1em;
 	a {
+		margin-top: 0 !important;
 		font-size: 1rem !important;
 		border-color: hsla(186,80%,70%,1) !important;
 		color: hsla(186,80%,70%,1) !important;
 	}
+	@media screen and (max-width: 767px) {
+		a {
+			width: 100% !important;
+			text-align: center;
+		}
+	}
 	@media screen and (min-width: 768px) {
 		a {
+			margin: 0 !important;
 			font-size: 1.25rem !important;
 		}
 	}
