--- a/assets/css/_sass/_spatial-tech.scss
+++ b/assets/css/_sass/_spatial-tech.scss
@@ -352,6 +352,7 @@
 						 "start"
 						 "people"
 						 "faq"
+						 "contact"
 						 "resource"
 						 "invent"
 						 "include"
@@ -367,7 +368,6 @@
 							 "people people"
 							 "faq start"
 							 "faq ....."
-							 
 							 "contact resource"
 							 "invent invent"
 							 "include workshop"
