--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,15 +47,15 @@
     <div class="footer__contact">
       <div class="footer-contact__title">Contact</div>
       <div class="footer-contact__email"><span>Email:</span><a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a></div>
-      <div class="footer-contact__address"><span>Address:</span>P.O. Box 400129<br/>Charlottesville, VA<br/>22904-4129</div>
+      <div class="footer-contact__address"><span>Address:</span>P.O. Box 400109<br/>Charlottesville, VA<br/>22904-4129</div>
       <div class="footer-contact__phone"><span>Phone:</span>434-243-8800</div>
-      <div class="footer-contact__fax"><span>Fax:</span>434-924-1431</div>
     </div>
 
     <div class="footer__logos">
       <a href="{{ site.url }}" class="footer-logo__slab" aria-label="Scholars' Lab home"><img src="{{ '/assets/img/svg/slab-logo-color-white.svg' | relative_url }}" alt="SLab logo"></a>
       <span>proudly part of</span>
       <a href="https://www.library.virginia.edu/" class="footer-logo__uva" aria-label="UVA Library home"><img src="{{ '/assets/img/svg/uva-library-text-block-white.svg' | relative_url }}" alt="UVA Library logo"></a>
+      <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     </div>
 
   </div>
