Remove width attribute from image

--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="project-content-wrapper">
 	<div class="project-content__img">
-		<img width="400" src="{{ '/assets/img/research/' | append: page.banner-img | relative_url }}" alt="{{ page.title }}">
+		<img src="{{ '/assets/img/research/' | append: page.banner-img | relative_url }}" alt="{{ page.title }}">
 	</div>
 	<div class="project-content__title">
 		<div>{{ page.title }}</div>
