--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -3,25 +3,51 @@
 // nb: identifier = 'project' to avoid conflict w/ research page
 
 .project-content-wrapper {
+	position: relative;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 2fr 1fr;
+	grid-template-rows: auto auto auto auto;
+	width: 100%;
+	height: 100vh;
 
 }
 
 .project-content__img {
-
+	position: relative;
+	grid-column: 1 / span 3;
+	grid-row: 1 / span 2;
+	width: 100%;
+	height: 100%;
+	border: 1px solid rgba(0,0,0,.5);
+	img {
+		max-width: 100%;
+	}
 }
 
 .project-content__title {
-
+	position: relative;
+	grid-column: 3 / span 3;
+	grid-row: 1 / span 1;
+	border: 1px solid rgba(0,0,0,.5);
 }
 
 .project-content__category {
-
+	position: relative;
+	grid-column: 1 / span 3;
+	grid-row: 3 / span 1;
+	border: 1px solid rgba(0,0,0,.5);
 }
 
 .project-content__year {
-
+	position: relative;
+	grid-column: 1 / span 3;
+	grid-row: 4 / span 2;
+	border: 1px solid rgba(0,0,0,.5);
 }
 
 .project-content__text {
-
+	position: relative;
+	grid-column: 4 / span 2;
+	grid-row: 2 / span 3;
+	border: 1px solid rgba(0,0,0,.5);
 }
