--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -8,8 +8,9 @@
 	grid-template-columns: 1fr 1fr 1fr 2fr 1fr;
 	grid-template-rows: auto auto auto auto;
 	width: 100%;
-	height: 100vh;
-
+	min-height: 100vh;
+	padding: 3rem;
+	margin-top: -60px; // no header
 }
 
 .project-content__img {
