--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -54,6 +54,6 @@
 .project-content__text {
 	position: relative;
 	grid-column: 4 / span 2;
-	grid-row: 2 / span 3;
-	border: 1px solid rgba(0,0,0,.5);
+	grid-row: 2 / span 4;
+	align-self: end;
 }
