Style project description in-text links w/ data colors
- Underline = 100% opacity color

- Unsure what to do about the hover version; it is both a) not working
  but b) wouldn't work aesthetically because of how dark some of the
  colors are

--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -16,3 +16,14 @@ layout: no-header
 	<div class="project-content__year">{{ page.year }}</div>
 	<div class="project-content__text">{{ content }}</div>
 </article>
+
+<script>
+	var textLinks = document.querySelectorAll(".project-content__text p a");
+	var hoverLinks = document.querySelectorAll(".project-content__text p a:hover");
+	for (let a of textLinks) {
+		a.style.borderBottomColor = "{{ colors[0].color }}";
+	}
+	for (let a of hoverLinks) {
+		a.style.backgroundColor = "{{ colors[0].color }}";
+	}
+</script>
