--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -4,7 +4,7 @@ layout: no-header
 
 {% assign colors = site.data.research[page.slug] %}
 
-<article class="project-content-wrapper" style="background-color: {{ colors[0].color-bg }}; background-image: linear-gradient(rgba(255,255,255,.2), rgba(255,255,255,.2));">
+<article class="project-content-wrapper" style="background-color: {{ colors[0].color-bg }};">
 	<div class="project-content__img">
 		<img src="{{ '/assets/img/research/' | append: page.banner-img | relative_url }}" alt="{{ page.title }}">
 	</div>
