--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -5,8 +5,13 @@
 .project-content-wrapper {
 	position: relative;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 2fr 1fr;
+	grid-template-columns: 1fr 1fr;
 	grid-template-rows: auto auto auto auto;
+	grid-template-areas: "year title"
+						 "cat title"
+						 "pic title"
+						 "text text";
+	align-items: start;
 	width: 100%;
 	min-height: 100vh;
 	padding: 3rem;
@@ -15,11 +20,12 @@
 
 .project-content__img {
 	position: relative;
-	grid-column: 1 / span 3;
-	grid-row: 1 / span 2;
+	grid-area: pic;
+//	grid-column: 1 / span 3;
+//	grid-row: 1 / span 2;
 	width: 100%;
 	height: 100%;
-	border: 1px solid rgba(0,0,0,.5);
+//	border: 1px solid rgba(0,0,0,.5);
 	img {
 		max-width: 100%;
 		box-shadow: 10px 20px 40px 0px rgba(0,0,0,.3);
@@ -28,15 +34,15 @@
 
 .project-content__title {
 	position: relative;
-	grid-column: 3 / span 3;
-	grid-row: 1 / span 1;
-	border: 1px solid rgba(0,0,0,.5);
+	grid-area: title;
+//	grid-column: 2 / span 4;
+//	grid-row: 1 / span 1;
 }
 
 .project-content__year, .project-content__category {
 	position: relative;
-	grid-column: 1 / span 3;
-	grid-row: 3 / span 1;
+//	grid-column: 1 / span 3;
+//	grid-row: 3 / span 1;
 	padding-top: .5em;
 	font-size: 1.5rem;
 	font-family: "base-mono-wide", monospace;
@@ -45,16 +51,22 @@
 }
 
 .project-content__year {
+	grid-area: year;
+//	color: rgba(0,0,0,.5);
+}
+
 .project-content__category {
+	grid-area: cat;
 	position: relative;
-	grid-column: 1 / span 3;
-	grid-row: 4 / span 1;
+//	grid-column: 1 / span 3;
+//	grid-row: 4 / span 1;
 }
 
 .project-content__text {
+	grid-area: text;
 	position: relative;
-	grid-column: 4 / span 2;
-	grid-row: 2 / span 4;
+//	grid-column: 4 / span 2;
+//	grid-row: 2 / span 4;
 	align-self: end;
 	p {
 		margin: 0;
