Add metadata wrapper around year & category sections
- Realized no matter the layout they'll always be on top of one
  another, so may as well ensure that their grid rows are never
  absurdly large for the layout

--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -13,8 +13,11 @@ layout: no-header
 		<span>{{ page.title }}</span>
 	</div>
 	
-	<div class="project-content__category">{{ page.research-category | replace: 'and', '&amp;' }}</div>
-	<div class="project-content__year">{{ page.year }}</div>
+	<div class="project-content__metadata">
+		<div class="project-content__year">{{ page.year }}</div>
+		<div class="project-content__category">{{ page.research-category | replace: 'and', '&amp;' }}</div>
+	</div>
+
 	<div class="project-content__text">{{ content }}</div>
 </article>
 
