--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -2,6 +2,8 @@
 
 // nb: identifier = 'project' to avoid conflict w/ research page
 
+/* Layout */
+
 .project-content-wrapper {
 	position: relative;
 	display: grid;
@@ -18,6 +20,8 @@
 	margin-top: -60px; // no header
 }
 
+/* Image */
+
 .project-content__img {
 	position: relative;
 	grid-area: pic;
@@ -31,6 +35,8 @@
 		box-shadow: 10px 20px 40px 0px rgba(0,0,0,.3);
 	}
 }
+
+/* Title */
 
 .project-content__title {
 	position: relative;
@@ -66,6 +72,8 @@
 //	grid-column: 1 / span 3;
 //	grid-row: 4 / span 1;
 }
+
+/* Text */
 
 .project-content__text {
 	grid-area: text;
