Adjust title font media query to maintain size ratio with <p> text
- 768px breakpoint for each

- NB: not all of the title font sizes are in good shape right now;
      this is kind of the only one that is...

--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -43,6 +43,9 @@
 	grid-area: title;
 //	grid-column: 2 / span 4;
 //	grid-row: 1 / span 1;
+	@media screen and (min-width: 768px) {
+		font-size: 4.5rem; // 18px * 4
+	}
 /* Metadata */
 
 .project-content__metadata {
