Adjust grid template to include meta section & remove row declaration
- Rows were all labeled 'auto' so wasn't doing anything; and # rows have
  been highly variable as layout moves along so was more likely to mess
  something up than help at this point

--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -8,11 +8,11 @@
 	position: relative;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: auto auto auto auto;
-	grid-template-areas: "year title"
-						 "cat title"
+	grid-template-areas: "... title"
 						 "pic title"
-						 "text text";
+						 "pic meta"
+						 "pic text"
+						 "... text";
 	align-items: start;
 	width: 100%;
 	min-height: 100vh;
